# projectx

./: .env  .gitignore  README.md  docker-compose-test.yaml  docker-compose.yaml  dockerfile  pyproject.toml
src/: alembic.ini  app.py  conf.py
src/app/: .env  app.py  conf.py
src/app/mdeposit/: depmodel.py  deposit.py  depschema.py
src/app/setupdb/: connectordb.py  metadb.py
src/mdeposit/: depmodel.py  deposit.py  depschema.py
src/migrations/: env.py
src/setupdb/: connectordb.py
src/tests/: conftest.py  test_deposit.py
